syntax = "proto3";

package api.note_v1;

option go_package = "github.com/Nau077/golang-pet-first/pkg/note_v1";

service NoteService {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponse);
  rpc DeleteNote (DeleteNoteRequest) returns (Empty);
  rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponse);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponse);
  rpc GetNoteList (Empty) returns (GetNoteListResponse);
}

message Empty {
}

message NoteContent {
  string title = 1;
  string text = 2;
  string author = 3;
}

message Record {
  int64 id = 1;
  NoteContent note_content = 2;
}

message CreateNoteRequest {
   NoteContent NoteContent = 1;
}

message CreateNoteResponse {
  int64 id = 1;
}

message DeleteNoteRequest {
  int64 id = 1;
}

message UpdateNoteRequest {
  Record record = 1;
}

message UpdateNoteResponse {
  int64 id = 1;
}

message GetNoteRequest {
  int64 id = 1;
}

message GetNoteResponse {
   Record record = 1;
}

message GetNoteListResponse {
  repeated Record record = 1;
}